--- a/front-end/minhas-financas-app/package.json
+++ b/front-end/minhas-financas-app/package.json
@@ -13,6 +13,7 @@
     "react-router": "5.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
