--- a/front-end/minhas-financas-app/package.json
+++ b/front-end/minhas-financas-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootswatch": "^5.1.3",
+    "currency-formatter": "^1.5.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "5.2",
