--- a/front-end/minhas-financas-app/package.json
+++ b/front-end/minhas-financas-app/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootswatch": "^5.1.3",
     "currency-formatter": "^1.5.9",
+    "primeflex": "^3.2.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "5.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
