--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.datasource.url= jdbc:postgresql://localhost:5432/parking-control-db
 #spring.datasource.name=postgres
-#spring.datasource.password=banco123
+#spring.datasource.password=
 #spring.jpa.hibernate.ddl-auto=update
 #
 #spring.jpa.properties.jdbc.lob.non_contextual_creation=true
